--- a/event-sourcing-nestjs-example/package.json
+++ b/event-sourcing-nestjs-example/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/cqrs": "^6.1.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.7.2",
     "dotenv": "^8.2.0",
